--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@rescript/react": "^0.11.0",
     "autoprefixer": "^10.4.13",
+    "daisyui": "^2.46.1",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
