--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rescript/react": "^0.11.0",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.46.1",
+    "date-fns": "^2.29.3",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
