--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "rehype-add-classes": "^1.0.0",
     "rehype-highlight": "^5.0.2",
     "rehype-raw": "^6.1.1",
