--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "packageManager": "yarn@3.3.1",
   "scripts": {
     "res:dev": "rescript build -w",
+    "res:build": "rescript",
     "next:dev": "next dev",
     "next:build": "next build",
     "next:start": "next start"
