--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "res:build": "rescript",
     "next:dev": "next dev",
     "next:build": "next build",
-    "next:start": "next start"
+    "next:start": "next start",
+    "dev": "concurrency \"yarn res:dev\" \"yarn next:dev\""
   },
   "dependencies": {
     "@rescript/react": "^0.11.0",
@@ -42,6 +43,9 @@
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.4",
     "unified": "^10.1.2"
+  },
+  "devDependencies": {
+    "concurrency": "^0.1.4"
   },
   "resolutions": {
     "remark-embed-images@^3.1.0": "patch:remark-embed-images@npm%3A3.1.0#./.yarn/patches/remark-embed-images-npm-3.1.0-e9217c5f06.patch"
