--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "concurrently \"yarn res:dev\" \"yarn next:dev\""
   },
   "dependencies": {
+    "@nabi-chan/remark-embed": "1.0.0",
     "@rescript/react": "^0.11.0",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.46.1",
@@ -39,8 +40,7 @@
     "remark-render": "^0.0.16",
     "rescript": "^10.1.1",
     "sass": "^1.57.1",
-    "tailwindcss": "^3.2.4",
-    "unified": "^10.1.2"
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "concurrently": "^7.6.0"
