--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
+    "@babel/generator": "^7.20.7",
+    "@babel/parser": "^7.20.7",
+    "@babel/traverse": "^7.20.12",
+    "@babel/types": "^7.20.7",
     "concurrently": "^7.6.0"
   },
   "resolutions": {
