--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
   },
   "dependencies": {
     "@nabi-chan/remark-embed": "1.0.0",
-    "@rescript/react": "^0.11.0",
-    "autoprefixer": "^10.4.13",
-    "daisyui": "^2.46.1",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "next": "^13.1.1",
@@ -38,16 +35,20 @@
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "remark-render": "^0.0.16",
-    "rescript": "^10.1.1",
-    "sass": "^1.57.1",
-    "tailwindcss": "^3.2.4"
+    "sass": "^1.57.1"
   },
   "devDependencies": {
     "@babel/generator": "^7.20.7",
     "@babel/parser": "^7.20.7",
     "@babel/traverse": "^7.20.12",
     "@babel/types": "^7.20.7",
-    "concurrently": "^7.6.0"
+    "@rescript/react": "^0.11.0",
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^7.6.0",
+    "daisyui": "^2.46.1",
+    "rescript": "^10.1.1",
+    "tailwindcss": "^3.2.4",
+    "vercel": "^28.12.4"
   },
   "resolutions": {
     "remark-embed-images@^3.1.0": "patch:remark-embed-images@npm%3A3.1.0#./.yarn/patches/remark-embed-images-npm-3.1.0-e9217c5f06.patch"
